--- a/src/pages/entities/education/EducationsFiltration/EducationsFiltration.module.scss
+++ b/src/pages/entities/education/EducationsFiltration/EducationsFiltration.module.scss
@@ -24,6 +24,7 @@
     & .filtrationAddon {
       pointer-events: all;
       height: max-content;
+      overflow: visible;
     }
   }
 }
